ラウンド情報取得APIの仕様に投票数情報を追加
